Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.

$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.5.0
-------------
* Build
  + Add --with-cuda-version=<version> or look at the CUDA_VERSION
    environment variable to find the appropriate CUDA pkg-config files.
    Thanks to Stephen Herbein for the suggestion.
    - Also add --with-cuda=<dir> to specify the CUDA installation path
      manually (and its NVML and OpenCL components).
      Thanks to Andrea Bocci for the suggestion.
    - See "How do I enable CUDA and select which CUDA version to use?"
      in the FAQ for details.
* Tools
  + hwloc-ps now has a --short-name option to avoid long/truncated
    command path.


Version 2.4.1
-------------
* Fix AMD OpenCL device locality when PCI bus or device number >= 128.
  Thanks to Edgar Leon for reporting the issue.
  + Applications using any of the following inline functions must
    be recompiled to get the fix: hwloc_opencl_get_device_pci_busid()
    hwloc_opencl_get_device_cpuset(), hwloc_opencl_get_device_osdev().
* Fix the ranking of cpukinds on non-Windows systems,
  thanks to Ivan Kochin for the report.
* Fix the insertion of custom Groups after loading the topology,
  thanks to Scott Hicks.
* Add support for CPU0 being offline in Linux, thanks to Garrett Clay.
* Fix missing x86 Package and Core objects FreeBSD/NetBSD.
  Thanks to Thibault Payet and Yuri Victorovich for the report.
* Fix the import of very large distances with heterogeneous object types.
* Fix a memory leak in the Linux backend,
  thanks to Perceval Anichini.


Version 2.4.0
-------------
* API
  + Add hwloc/cpukinds.h for reporting information about hybrid CPUs.
    - Use Linux cpufreq frequencies to rank cores by efficiency.